samples/service/mesh/virtualservice-destinationrule-servicegraph.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicegraph
spec:
  hosts:
  - "servicegraph.example.info"
  gateways:
  - bookinfo-gateway
  http:
  - route:
    - destination:
        host: servicegraph.istio-system.svc.cluster.local
        port:
          number: 8088

---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: servicegraph
spec:
  host: "servicegraph.istio-system.svc.cluster.local"
  # servicegraph is installed without sidecars, thus mutual tls is disabled
